crates/test-files/fixtures/compile_errors/not_in_scope_2.fe
contract Foo {
    pub fn bar() -> u256 {
        let mut i: u256 = 0
        while i < 1 {
            i = 1
            let y: u256 = 1
        }
        return y
    }
}
